--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Research Supabase</string>
     <string name="product_list_text_screen_title">Product</string>
+    <string name="add_product_text_screen_title">Create product</string>
 </resources>
